///<copyright> Secret Dimension Inc. 2025, All rights reserved <copyright>
using UnityEngine;

namespace SecretDimension
{
    // Constant strings used for setting animator parameters
    public static class AnimatorStrings
    {
        public const string MovementSpeed = "MovementSpeed";
        public const string MovementAnimationSpeed = "MovementAnimationSpeed";
        public const string IsAirborne = "IsAirborne";
        public const string IsDead = "IsDead";
        public const string Hit = "Hit";
        public const string IsMoving = "IsMoving";
        public const string Attack = "Attack";
        public const string IsShakingHead = "IsShakingHead";
        public const string Footstep = "Footstep";
    }
}
